Added configuration for profiling functions

--- a/config/engine.cfg
+++ b/config/engine.cfg
@@ -1,4 +1,8 @@
 
 # Limit framerate to this number of frames per second.  Zero for no limit.  Lower numbers save energy.
+self.limitFramerate = 60
 
-self.limitFramerate = 0
+# Store all ImageSurface objects in memory for profiling and debugging.
+#  (uncomment to enable)
+#surf.profilerRecordImageSurfaces()
+
