Few error logging tweaks

--- a/config/debug.cfg
+++ b/config/debug.cfg
@@ -11,3 +11,5 @@ levelSystemConsole =	 DEBUG
 levelLogFile =		 DEBUG
 
 formatLogging = "%(levelname)8s | %(lineno)4d | %(name)-15s |: %(message)s"
+
+purgeNonCriticalLogs = True
